--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.30.0",
+    "@supabase/supabase-js": "^2.55.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
