--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=us-east-2
+S3_BUCKET=myapp-resume-bucket
