--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.864.0",
+    "@aws-sdk/s3-presigned-post": "^3.864.0",
+    "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@clerk/nextjs": "^6.30.0",
     "next": "15.4.6",
     "react": "19.1.0",
